fix: add break-word to avoid overflow

--- a/app/components/VenueLocation/VenueLocation.module.css
+++ b/app/components/VenueLocation/VenueLocation.module.css
@@ -29,6 +29,10 @@
             justify-content: flex-start;
             gap: var(--spacing-gap);
 
+            span {
+                word-wrap: break-word;
+            }
+
         }
 
         .hoursWrapper {
